# python-videoplayer

./: .appveyor.yml  .gitignore  CHANGELOG.md  CMakeLists.txt  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: tests.yml
tests/: test_videoplayer.py
videoplayer/: CMakeLists.txt  VideoPlayer.c  VideoPlayer.h  _VideoPlayer.pyx
